--- a/stylesheets/page_styles.css
+++ b/stylesheets/page_styles.css
@@ -5,7 +5,7 @@
 
 @font-face {
     font-family: 'Pusab';
-    src: (url('../assets/PUSAB___.otf'));
+    src: (url('../assets/Pusab.ttf'));
 }
 
 .default {
