--- a/stylesheets/bars.css
+++ b/stylesheets/bars.css
@@ -2,7 +2,7 @@
     font-family: 'Impact';
     text-align: center;
     white-space: nowrap;
-    box-shadow: #522222 0px 5px 8px;
+    box-shadow: 0px 16px 16px #0007;
 }
 #topbar h1 {
     font-size: 96px;
