--- a/stylesheets/bars.css
+++ b/stylesheets/bars.css
@@ -2,10 +2,11 @@
     font-family: 'Impact';
     text-align: center;
     white-space: nowrap;
-    box-shadow: 0px 16px 16px #0007;
+    box-shadow: 0px 8px 32px #0007;
 }
 #topbar h1 {
     font-size: 96px;
+    text-shadow: 6px 8px 4px #0005;
 }
 
 
